--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,11 @@
             <version>1.8.5</version>
         </dependency>
         <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.0.1</version>
+        </dependency>
+        <dependency>
             <groupId>com.yammer.metrics</groupId>
             <artifactId>metrics-core</artifactId>
             <version>2.0.0-BETA17-SNAPSHOT</version>
