--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,7 @@
             <groupId>com.yammer.metrics</groupId>
             <artifactId>metrics-core</artifactId>
             <version>2.0.0-BETA17-SNAPSHOT</version>
+            <type>test-jar</type>
         </dependency>
         <dependency>
             <groupId>com.yammer.metrics</groupId>
