--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,19 @@
             <artifactId>metrics-ganglia</artifactId>
             <version>2.0.0-BETA17-SNAPSHOT</version>
         </dependency>
+        
+        <dependency>
+			<groupId>org.mockito</groupId>
+            <artifactId>mockito-all</artifactId>  
+            <version>1.9.0-rc1</version> 
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+		    <groupId>org.slf4j</groupId>
+		    <artifactId>slf4j-log4j12</artifactId>
+		    <version>1.6.2</version>
+            <scope>test</scope>
+		</dependency>
     </dependencies>
 
     <developers>
