Default configuration variables
git-svn-id: http://svn/thetan/metricCatcher/trunk@105151 e872ca34-ba15-0410-9420-be5960fa97e5

--- a/conf/config.properties
+++ b/conf/config.properties
@@ -1,1 +1,4 @@
+metricCatcher.ganglia.host=ganglia.clearspring.com
+metricCatcher.ganglia.port=8649
+metricCatcher.maxMetrics=500
 metricCatcher.udp.port=1420
