--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,11 @@
             <version>3.0.1</version>
         </dependency>
         <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>1.4</version>
+        </dependency>
+        <dependency>
             <groupId>com.yammer.metrics</groupId>
             <artifactId>metrics-core</artifactId>
             <version>2.0.0-BETA17-SNAPSHOT</version>
@@ -47,8 +52,8 @@
 
         <dependency>
             <groupId>org.mockito</groupId>
-            <artifactId>mockito-all</artifactId>  
-            <version>1.9.0-rc1</version> 
+            <artifactId>mockito-all</artifactId>
+            <version>1.9.0-rc1</version>
             <scope>test</scope>
         </dependency>
         <dependency>
