--- a/pom.xml
+++ b/pom.xml
@@ -30,9 +30,9 @@
             <version>3.0.1</version>
         </dependency>
         <dependency>
-            <groupId>org.apache.commons</groupId>
+            <groupId>commons-codec</groupId>
             <artifactId>commons-codec</artifactId>
-            <version>1.4</version>
+            <version>1.5</version>
         </dependency>
         <dependency>
             <groupId>com.yammer.metrics</groupId>
