--- a/conf/log4j.properties
+++ b/conf/log4j.properties
@@ -1,11 +1,11 @@
 ## log4j configuration
-log4j.rootLogger=trace, console, roller
+log4j.rootLogger=DEBUG, console, roller
 
 ## console appender
 log4j.appender.console=org.apache.log4j.ConsoleAppender
 log4j.appender.console.layout=org.apache.log4j.PatternLayout
 log4j.appender.console.layout.ConversionPattern=%d{ISO8601} | %-5p | %-40c | %m%n
-log4j.appender.console.threshold=debug
+log4j.appender.console.threshold=DEBUG
 
 ## log file appender
 log4j.appender.roller=org.apache.log4j.RollingFileAppender
@@ -14,7 +14,7 @@ log4j.appender.roller.MaxFileSize=10MB
 log4j.appender.rolling.MaxBackupIndex=1
 log4j.appender.roller.layout=org.apache.log4j.PatternLayout
 log4j.appender.roller.layout.ConversionPattern=%d{ISO8601} | %-5p | %-40c | %m%n
-log4j.appender.roller.threshold=debug
+log4j.appender.roller.threshold=DEBUG
 
 ## override the log level for specific packages
 #log4j.logger.com.foo=WARN
