--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     <groupId>com.clearspring.thetan</groupId>
     <artifactId>metricCatcher</artifactId>
     <name>metricCatcher</name>
-    <version>0.0.1</version>
+    <version>0.0.2-SNAPSHOT</version>
     <description>Receives metrics on UDP, sends them to Ganglia</description>
 
     <properties>
@@ -74,9 +74,9 @@
     </developers>
 
     <scm>
-        <connection>scm:svn:http://svn/thetan/metricCatcher/tags/metricCatcher-0.0.1</connection>
-        <developerConnection>scm:svn:http://svn/thetan/metricCatcher/tags/metricCatcher-0.0.1</developerConnection>
-        <url>http://svn/thetan/metricCatcher/tags/metricCatcher-0.0.1</url>
+        <connection>scm:svn:http://svn/thetan/metricCatcher</connection>
+        <developerConnection>scm:svn:http://svn/thetan/metricCatcher/trunk</developerConnection>
+        <url>http://svn/thetan/metricCatcher/trunk</url>
     </scm>
 
     <build>
