--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     <artifactId>metricCatcher</artifactId>
     <name>metricCatcher</name>
     <version>0.0.3-SNAPSHOT</version>
-    <description>Receives metrics on UDP, sends them to Ganglia</description>
+    <description>Receives metrics on UDP, sends them to Ganglia or Graphite</description>
 
     <properties>
         <spring.version>2.5.5</spring.version>
