--- a/conf/config.properties
+++ b/conf/config.properties
@@ -1,4 +1,10 @@
-metricCatcher.ganglia.host=ganglia.clearspring.com
-metricCatcher.ganglia.port=8649
+# Where to send metrics
+#metricCatcher.ganglia.host=ganglia.clearspring.com
+#metricCatcher.ganglia.port=8649
+metricCatcher.graphite.host=ganglia.clearspring.com
+metricCatcher.graphite.port=2023
+
+# Number of metrics to keep around (LRU style)
 metricCatcher.maxMetrics=500
+# Listening port
 metricCatcher.udp.port=1420
