--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <spring.version>2.5.5</spring.version>
         <slf4j.version>1.6.1</slf4j.version>
         <scala.version>2.8.1</scala.version>
+        <metrics.version>2.0.0-BETA18-SNAPSHOT</metrics.version>
     </properties>
 
     <dependencies>
@@ -37,17 +38,17 @@
         <dependency>
             <groupId>com.yammer.metrics</groupId>
             <artifactId>metrics-core</artifactId>
-            <version>2.0.0-BETA18-SNAPSHOT</version>
+            <version>${metrics.version}</version>
         </dependency>
         <dependency>
             <groupId>com.yammer.metrics</groupId>
             <artifactId>metrics-graphite</artifactId>
-            <version>2.0.0-BETA18-SNAPSHOT</version>
+            <version>${metrics.version}</version>
         </dependency>
         <dependency>
             <groupId>com.yammer.metrics</groupId>
             <artifactId>metrics-ganglia</artifactId>
-            <version>2.0.0-BETA18-SNAPSHOT</version>
+            <version>${metrics.version}</version>
         </dependency>
 
         <dependency>
