--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,5 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <parent>
-        <groupId>com.clearspring.common.build.maven.pom</groupId>
-        <artifactId>jar-pom</artifactId>
-        <version>1.0.7</version>
-    </parent>
 
     <groupId>com.clearspring</groupId>
     <artifactId>metricCatcher</artifactId>
@@ -53,6 +48,12 @@
             <version>${metrics.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.10</version>
+            <scope>test</scope>
+        </dependency>
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-all</artifactId>
