--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
         <spring.version>2.5.5</spring.version>
         <slf4j.version>1.6.1</slf4j.version>
         <scala.version>2.8.1</scala.version>
-        <metrics.version>2.0.0-BETA18-SNAPSHOT</metrics.version>
+        <metrics.version>2.0.0-BETA18</metrics.version>
     </properties>
 
     <dependencies>
