--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,7 @@
                 <artifactId>maven-release-plugin</artifactId>
                 <version>2.0-beta-8</version>
                 <configuration>
+                    <pushChanges>false</pushChanges>
                     <allowTimestampedSnapshots>true</allowTimestampedSnapshots>
                 </configuration>
             </plugin>
