--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <groupId>com.clearspring</groupId>
     <artifactId>metricCatcher</artifactId>
     <name>metricCatcher</name>
-    <version>0.0.6-SNAPSHOT</version>
+    <version>0.0.6</version>
     <description>Receives metrics on UDP, sends them to Ganglia or Graphite</description>
 
     <licenses>
@@ -108,8 +108,9 @@
                 <artifactId>maven-release-plugin</artifactId>
                 <version>2.0-beta-8</version>
                 <configuration>
-                    <pushChanges>false</pushChanges>
                     <allowTimestampedSnapshots>true</allowTimestampedSnapshots>
+                    <!-- Make signing prompt for passphrase properly http://jira.codehaus.org/browse/MGPG-9 -->
+                    <mavenExecutorId>forked-path</mavenExecutorId>
                 </configuration>
             </plugin>
 
