--- a/conf/config.properties
+++ b/conf/config.properties
@@ -1,10 +1,10 @@
 # Where to send metrics
-#metricCatcher.ganglia.host=ganglia.clearspring.com
-#metricCatcher.ganglia.port=8649
-metricCatcher.graphite.host=ganglia.clearspring.com
-metricCatcher.graphite.port=2023
+#metriccatcher.ganglia.host=ganglia.clearspring.com
+#metriccatcher.ganglia.port=8649
+metriccatcher.graphite.host=ganglia.clearspring.com
+metriccatcher.graphite.port=2023
 
 # Number of metrics to keep around (LRU style)
-metricCatcher.maxMetrics=500
+metriccatcher.maxMetrics=500
 # Listening port
-metricCatcher.udp.port=1420
+metriccatcher.udp.port=1420
