--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -1,4 +1,4 @@
-metricCatcher.ganglia.host=ganglia.clearspring.com
-metricCatcher.ganglia.port=8649
-metricCatcher.maxMetrics=500
-metricCatcher.udp.port=1420
+metriccatcher.ganglia.host=ganglia.clearspring.com
+metriccatcher.ganglia.port=8649
+metriccatcher.maxMetrics=500
+metriccatcher.udp.port=1420
