Update config file

--- a/conf/config.properties
+++ b/conf/config.properties
@@ -1,10 +1,12 @@
 # Where to send metrics
-#metriccatcher.ganglia.host=ganglia.clearspring.com
+#metriccatcher.ganglia.host=ganglia.clearspring.local
 #metriccatcher.ganglia.port=8649
-metriccatcher.graphite.host=ganglia.clearspring.com
+metriccatcher.graphite.host=graphite.clearspring.local
 metriccatcher.graphite.port=2023
 
 # Number of metrics to keep around (LRU style)
 metriccatcher.maxMetrics=500
 # Listening port
 metriccatcher.udp.port=1420
+# How often to report metrics
+metriccatcher.interval=60
