Allow users to specify the Graphite prefix used (or remove it completely)

--- a/conf/config.properties
+++ b/conf/config.properties
@@ -3,6 +3,8 @@
 #metriccatcher.ganglia.port=8649
 metriccatcher.graphite.host=graphite.clearspring.local
 metriccatcher.graphite.port=2023
+# Leaving Graphite prefix out will default to using the hostname 
+#metriccatcher.graphite.prefix=my.prefix
 
 # Number of metrics to keep around (LRU style)
 metriccatcher.maxMetrics=500
