Allow users to disable the reporting of JVM metrics
This is useful when (in our use case) you remove any prefix and allow users to specify the full path of their metrics.

--- a/conf/config.properties
+++ b/conf/config.properties
@@ -12,3 +12,5 @@ metriccatcher.maxMetrics=500
 metriccatcher.udp.port=1420
 # How often to report metrics
 metriccatcher.interval=60
+# Whether to disable reporting of JVM metrics (false by default)
+metriccatcher.disableJvmMetrics=true
