--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <groupId>com.clearspring</groupId>
     <artifactId>metriccatcher</artifactId>
     <name>metriccatcher</name>
-    <version>0.1.4-SNAPSHOT</version>
+    <version>0.1.4</version>
     <description>Receives metrics on UDP, sends them to Ganglia or Graphite</description>
     <url>https://github.com/clearspring/MetricCatcher</url>
 
@@ -101,7 +101,8 @@
         <connection>scm:git:git://github.com/clearspring/MetricCatcher.git</connection>
         <developerConnection>scm:git:git://github.com/clearspring/MetricCatcher.git</developerConnection>
         <url>https://github.com/clearspring/MetricCatcher</url>
-    </scm>
+      <tag>metriccatcher-0.1.4</tag>
+  </scm>
 
     <build>
         <plugins>
