--- a/pom.xml
+++ b/pom.xml
@@ -23,9 +23,7 @@
     </repositories>
 
     <properties>
-        <spring.version>2.5.5</spring.version>
-        <slf4j.version>1.6.1</slf4j.version>
-        <scala.version>2.8.1</scala.version>
+        <slf4j.version>1.6.6</slf4j.version>
         <metrics.version>2.1.2</metrics.version>
     </properties>
 
@@ -72,7 +70,7 @@
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-log4j12</artifactId>
-            <version>1.6.2</version>
+            <version>${slf4j.version}</version>
         </dependency>
     </dependencies>
 
