optionally use metric-reporter-config

--- a/conf/config.properties
+++ b/conf/config.properties
@@ -14,3 +14,6 @@ metriccatcher.udp.port=1420
 metriccatcher.interval=60
 # Whether to disable reporting of JVM metrics (false by default)
 metriccatcher.disableJvmMetrics=true
+
+# Config file for https://github.com/addthis/metrics-reporter-config
+metriccatcher.reporterConfig=conf/reporter-config.yaml
