--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <groupId>com.clearspring</groupId>
     <artifactId>metriccatcher</artifactId>
     <name>metriccatcher</name>
-    <version>0.1.5-SNAPSHOT</version>
+    <version>0.2.0-SNAPSHOT</version>
     <description>Receives metrics on UDP, sends them to Ganglia or Graphite</description>
     <url>https://github.com/clearspring/MetricCatcher</url>
 
@@ -52,6 +52,12 @@
             <groupId>com.yammer.metrics</groupId>
             <artifactId>metrics-ganglia</artifactId>
             <version>${metrics.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.addthis.metrics</groupId>
+            <artifactId>reporter-config</artifactId>
+            <version>2.0.5</version>
         </dependency>
 
         <dependency>
