--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
       <version>3.1.0</version>
     </parent>
 
-    <groupId>com.clearspring</groupId>
+    <groupId>com.addthis</groupId>
     <artifactId>metriccatcher</artifactId>
     <name>metriccatcher</name>
     <version>0.2.1-SNAPSHOT</version>
