--- a/pom.xml
+++ b/pom.xml
@@ -116,6 +116,26 @@
     </plugins>
   </build>
 
+  <reporting>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-checkstyle-plugin</artifactId>
+        <version>2.9.1</version>
+        <configuration>
+          <configLocation>${dep.plugin.checkstyle.configLocation}</configLocation>
+          <includeTestSourceDirectory>true</includeTestSourceDirectory>
+          <consoleOutput>false</consoleOutput>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.rat</groupId>
+        <artifactId>apache-rat-plugin</artifactId>
+        <version>0.10</version>
+      </plugin>
+    </plugins>
+  </reporting>
+
   <scm>
     <connection>scm:git:git@github.com:addthis/MetricCatcher.git</connection>
     <developerConnection>scm:git:git@github.com:addthis/MetricCatcher.git</developerConnection>
